# TopluyoBOTPY

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  topluyobot.py
.github/workflows/: publish.yml
topluyobot/: __init__.py  bot.py
