[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "topluyobot"
version = "1.0.1"
description = "Topluyo Bot Python kütüphanesi - WebSocket tabanlı bot istemcisi"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Topluyo", email = "info@topluyo.com"}
]
keywords = [
    "topluyo",
    "bot",
    "websocket",
    "async",
    "social",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Internet",
]

dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/TopluyoBOTPY"
Repository = "https://github.com/yourusername/TopluyoBOTPY.git"
Issues = "https://github.com/yourusername/TopluyoBOTPY/issues"
Documentation = "https://github.com/yourusername/TopluyoBOTPY#readme"

[tool.setuptools]
packages = ["topluyobot"]

[tool.setuptools.package-data]
topluyobot = ["py.typed"]
